--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ repository = "https://github.com/timewave-computer/valence-coprocessor"
 [workspace.dependencies]
 anyhow = { version = "=1.0.97", default-features = false }
 hashbrown = "=0.15.2"
+rocksdb = "=0.23.0"
