--- a/.github/workflows/check-ci.yml
+++ b/.github/workflows/check-ci.yml
@@ -2,9 +2,9 @@ name: build and test
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev]
   pull_request:
-    branches: [main]
+    branches: [main, dev]
 
 # Ensures that only a single workflow per PR will run at a time. Cancels in-progress jobs if new commit is pushed.
 concurrency:
