add sha2 impl and borsh + serde derive macros

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -7,8 +7,10 @@ description = "Sparse Merkle tree implementation for the Valence protocol"
 
 [dependencies]
 blake3 = { version = "=1.6.1", optional = true, default-features = false }
+sha2 = { version = "0.10.8", optional = true }
 
 [features]
 default = ["blake3", "std"]
 blake3 = ["dep:blake3"]
+sha2 = ["dep:sha2"]
 std = ["blake3?/std"]
