feat: add sp1 and wasmtime backends

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 # Build results
 /artifacts
-/target
+**/target
 
 # Cargo+Git helper file (https://github.com/rust-lang/cargo/blob/0.44.1/src/cargo/sources/git/utils.rs#L320-L327)
 .cargo-ok
