--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,15 @@ repository = "https://github.com/timewave-computer/valence-coprocessor"
 [workspace.dependencies]
 anyhow = { version = "=1.0.97", default-features = false }
 base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
+bincode = "1.3.3"
 blake3 = { version = "=1.6.1", default-features = false }
 clap = { version = "4.5.37", features = ["derive"] }
 hashbrown = "=0.15.2"
 lru = "0.14.0"
+msgpacker = { version = "0.4.6", default-features = false, features = [
+  "alloc",
+  "derive",
+] }
 serde = { version = "1.0.219", default-features = false, features = [
   "alloc",
   "derive",
