--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,6 +10,7 @@ anyhow.workspace = true
 base64.workspace = true
 hashbrown.workspace = true
 blake3.workspace = true
+msgpacker.workspace = true
 zerocopy = { version = "=0.8.23", features = ["alloc", "derive"] }
 serde.workspace = true
 serde_json.workspace = true
