--- a/crates/wasm/Cargo.toml
+++ b/crates/wasm/Cargo.toml
@@ -11,13 +11,17 @@ dlmalloc = { version = "=0.2.8", optional = true, features = ["global"] }
 hashbrown = { workspace = true, optional = true }
 lru.workspace = true
 msgpacker.workspace = true
-reqwest = { version = "=0.12.15", optional = true }
+reqwest = { version = "=0.12.15", optional = true, features = [
+  "blocking",
+  "json",
+] }
 serde = { workspace = true, optional = true }
 serde_json.workspace = true
 valence-coprocessor = { path = "../core", default-features = false }
 wasmtime = { version = "=32.0.0", optional = true }
 
 [dev-dependencies]
+tiny_http = "0.12.0"
 valence-coprocessor = { path = "../core", features = ["mocks", "std"] }
 
 [features]
