chore: update github workflow matrix to no-std pkg

--- a/.github/workflows/check-ci.yml
+++ b/.github/workflows/check-ci.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: ["valence-coprocessor-core", "valence-smt"]
+        package: ["valence-coprocessor"]
     steps:
       - uses: actions/checkout@v4
 
