--- a/crates/rocksdb/Cargo.toml
+++ b/crates/rocksdb/Cargo.toml
@@ -8,7 +8,7 @@ description = "The Valence co-processor RocksDB data backend."
 [dependencies]
 anyhow.workspace = true
 valence-coprocessor = { path = "../core", features = ["std"] }
-rocksdb = "=0.23.0"
+rocksdb = { version = "=0.23.0", features = ["multi-threaded-cf"] }
 
 [dev-dependencies]
 proptest = "=1.6.0"
