--- a/.github/workflows/check-ci.yml
+++ b/.github/workflows/check-ci.yml
@@ -65,6 +65,9 @@ jobs:
         with:
           toolchain: stable
 
+      - name: Add WASM target
+        run: rustup target add wasm32-unknown-unknown
+
       - name: Run tests
         run: cargo test --verbose
         env:
