--- a/crates/service/Cargo.toml
+++ b/crates/service/Cargo.toml
@@ -11,6 +11,7 @@ anyhow.workspace = true
 base64.workspace = true
 dirs = "6.0.0"
 serde.workspace = true
+serde_json.workspace = true
 tokio = { version = "1.44.2", features = ["full"] }
 toml = "0.8.20"
 valence-coprocessor.path = "../core"
