add SP1 tests to main merge

--- a/.github/workflows/check-ci.yml
+++ b/.github/workflows/check-ci.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: ["valence-coprocessor"]
+        package: ["valence-coprocessor", "valence-coprocessor-wasm"]
     steps:
       - uses: actions/checkout@v4
 
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: ["valence-coprocessor", "valence-coprocessor-service", "valence-coprocessor-wasm"]
+        package: ["valence-coprocessor", "valence-coprocessor-wasm"]
     steps:
       - uses: actions/checkout@v4
 
@@ -62,7 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        package: ["valence-coprocessor", "valence-coprocessor-service", "valence-coprocessor-wasm"]
+        package: ["valence-coprocessor", "valence-coprocessor-wasm"]
     steps:
       - uses: actions/checkout@v4
 
