--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,4 +34,16 @@ serde = { version = "1.0.219", default-features = false, features = [
 serde_json = { version = "1.0.140", default-features = false, features = [
   "alloc",
 ] }
-tracing = "0.1.41"
+tracing = { version = "0.1.41", default-features = false }
+
+[profile.optimized]
+inherits = "release"
+opt-level = 3
+debug = false
+strip = "symbols"
+debug-assertions = false
+overflow-checks = false
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+incremental = false
