fix: change url to accept hex instead of base64 (#28)
* feat(smt): add rocksdb support (#9)

This commit introduces RocksDB as backend for the SMT.

closes #5

* chore(smt): add rocksdb to main ci check

* fix(smt): allow value replace (#13)

* feat(smt): add rocksdb support (#9) (#10)

* fix(smt): allow value replace

This commit fixes the SMT behavior that will iterate over the bits of
the key until depletion. It instead replaces the value upon depletion.

It assumes the hash cannot produce more bits than [HASH_LEN] so a
collision is necessarily the same data being inserted.

related to #12

* improve docs

* feat: add execution context

* feat: add sp1 and wasmtime backends

* feat: add context to wasm runtime

* feat: add state proof to module program

* feat: add abi http

* chore: update github workflow matrix to no-std pkg

* chore: update to stable dependencies

* feat: add openapi service

* chore: add wasm32 target

* update deploy http test case

* expose prove API

* add readme

* update CI to run main tests for all

* add wasm target to main CI check

* add SP1 tests to main merge

* remove SP1 from CI

* remove ignored tests from main ci

* change url from base64 to hex

* update version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ resolver = "2"
 authors = ["Timewave Labs"]
 edition = "2021"
 license = "Apache-2.0"
-version = "0.1.0"
+version = "0.1.1"
 repository = "https://github.com/timewave-computer/valence-coprocessor"
 
 [workspace.dependencies]
@@ -34,4 +34,16 @@ serde = { version = "1.0.219", default-features = false, features = [
 serde_json = { version = "1.0.140", default-features = false, features = [
   "alloc",
 ] }
-tracing = "0.1.41"
+tracing = { version = "0.1.41", default-features = false }
+
+[profile.optimized]
+inherits = "release"
+opt-level = 3
+debug = false
+strip = "symbols"
+debug-assertions = false
+overflow-checks = false
+lto = "fat"
+codegen-units = 1
+panic = "abort"
+incremental = false
