--- a/crates/wasm/Cargo.toml
+++ b/crates/wasm/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = { version = "=0.12.15", optional = true, features = [
 ] }
 serde = { workspace = true, optional = true }
 serde_json.workspace = true
+tracing.workspace = true
 valence-coprocessor = { path = "../core", default-features = false }
 wasmtime = { version = "=32.0.0", optional = true }
 
@@ -36,5 +37,6 @@ std = [
   "serde",
   "serde/std",
   "serde_json/std",
+  "tracing/std",
   "wasmtime",
 ]
