--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,10 +42,8 @@ jobs:
       - name: Run cargo fmt
         run: cargo fmt --all -- --check
 
-      # Removed due to clippy bug
-      # https://github.com/timewave-computer/valence-coprocessor/actions/runs/14662473178/job/41149986950?pr=29
-      #- name: Run clippy
-      #  run: cargo clippy --all-targets --verbose -- -D warnings
+      - name: Run clippy
+        run: cargo clippy --all-targets --verbose -- -D warnings
 
       #- name: Run all tests
       #  run: cargo test --verbose -- --ignored
