chore: remove fixed versions for dependencies

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -11,13 +11,13 @@ base64.workspace = true
 hashbrown.workspace = true
 blake3.workspace = true
 msgpacker.workspace = true
-zerocopy = { version = "=0.8.23", features = ["alloc", "derive"] }
+zerocopy = { version = "0.8.23", features = ["alloc", "derive"] }
 serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
 
 [dev-dependencies]
-proptest = "=1.6.0"
+proptest = "1.6.0"
 
 [features]
 default = ["std"]
