--- a/crates/rocksdb/Cargo.toml
+++ b/crates/rocksdb/Cargo.toml
@@ -8,8 +8,8 @@ description = "The Valence co-processor RocksDB data backend."
 [dependencies]
 anyhow.workspace = true
 valence-coprocessor = { path = "../core", features = ["std"] }
-rocksdb = { version = "=0.23.0", features = ["multi-threaded-cf"] }
+rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
 
 [dev-dependencies]
-proptest = "=1.6.0"
-tempfile = "=3.19.1"
+proptest = "1.6.0"
+tempfile = "3.19.1"
