--- a/crates/service/Cargo.toml
+++ b/crates/service/Cargo.toml
@@ -15,7 +15,7 @@ serde_json.workspace = true
 tokio = { version = "1.44.2", features = ["full"] }
 toml = "0.8.20"
 valence-coprocessor.path = "../core"
-valence-coprocessor-rocksdb.path = "../rocksdb"
+valence-coprocessor-redis.path = "../redis"
 valence-coprocessor-sp1.path = "../sp1"
 valence-coprocessor-wasm.path = "../wasm"
 tracing.workspace = true
