--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,29 @@ env:
   RUSTFLAGS: "-Dwarnings"
 
 jobs:
-  test-all:
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Cache Build artifacts
+        uses: Swatinem/rust-cache@v2.7.5
+        with:
+          cache-on-failure: true
+          shared-key: ${{ github.event.pull_request.number || github.ref }}
+
+      - name: Run cargo fmt
+        run: cargo fmt --all -- --check
+
+      - name: Run cargo build
+        run: cargo build --all -- --check
+
+      - name: Run clippy
+        run: cargo clippy --all --all-targets --verbose -- -D warnings
+
+  tests:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -23,34 +45,12 @@ jobs:
       - name: Get cargo
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
-          profile: default
-          override: true
-          default: true
-          components: llvm-tools, rustc-dev
+          toolchain: stable
 
       - name: Add WASM target
         run: rustup target add wasm32-unknown-unknown
 
-      # SP1 is too expensive to run on CI
-      #- name: Install SP1 toolchain
-      #  run: |
-      #    curl -L https://sp1up.succinct.xyz | bash
-      #    ~/.sp1/bin/sp1up 
-      #    ~/.sp1/bin/cargo-prove prove --version
-
-      - name: Run cargo fmt
-        run: cargo fmt --all -- --check
-
-      - name: Run clippy
-        run: cargo clippy --all-targets --verbose -- -D warnings
-
-      #- name: Run all tests
-      #  run: cargo test --verbose -- --ignored
-      #  env:
-      #    RUST_BACKTRACE: 1
-
-      - name: Run all tests
-        run: cargo test --verbose
+      - name: Run tests
+        run: cargo test --all --verbose
         env:
           RUST_BACKTRACE: 1
