--- a/crates/domains/ethereum/Cargo.toml
+++ b/crates/domains/ethereum/Cargo.toml
@@ -11,14 +11,15 @@ msgpacker = { workspace = true, optional = true }
 serde = { workspace = true, optional = true }
 serde_json = { workspace = true, optional = true }
 valence-coprocessor = { path = "../../core", default-features = false }
+valence-coprocessor-wasm = { path = "../../runtime/wasm", default-features = false }
 valence-zk-proofs = { git = "https://github.com/timewave-computer/zk-merkle-proofs.git", package = "common", rev = "f474311c62df0011b549b48ea515d0d45dd1a4cc", optional = true }
 valence-zk-proofs-ethereum = { git = "https://github.com/timewave-computer/zk-merkle-proofs.git", package = "ethereum", rev = "f474311c62df0011b549b48ea515d0d45dd1a4cc", optional = true }
 
 [dev-dependencies]
 bincode.workspace = true
 valence-coprocessor = { path = "../../core", features = ["mocks"] }
-valence-coprocessor-wasm.path = "../../wasm"
-valence-coprocessor-sp1.path = "../../sp1"
+valence-coprocessor-wasm.path = "../../runtime/wasm"
+valence-coprocessor-sp1.path = "../../runtime/sp1"
 sp1-sdk.workspace = true
 
 [features]
