--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run cargo build
-        run: cargo build --all -- --check
+        run: cargo build --all
 
       - name: Run clippy
         run: cargo clippy --all --all-targets --verbose -- -D warnings
