--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,11 +14,12 @@ default-members = ["crates/core"]
 authors = ["Timewave Labs"]
 edition = "2021"
 license = "Apache-2.0"
-version = "0.1.6"
+version = "0.1.7"
 repository = "https://github.com/timewave-computer/valence-coprocessor"
 
 [workspace.dependencies]
 anyhow = { version = "1.0.97", default-features = false }
+ark-groth16 = { version = "0.5.0", default-features = false }
 base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
 bincode = "1.3.3"
 blake3 = { version = "1.6.1", default-features = false }
@@ -37,6 +38,7 @@ serde_json = { version = "1.0.140", default-features = false, features = [
   "alloc",
 ] }
 sp1-sdk = "4.2.0"
+sp1-verifier = "4.2.0"
 tracing = { version = "0.1.41", default-features = false }
 
 [profile.optimized]
