add prover service backend

--- a/crates/endpoint/prover/Cargo.toml
+++ b/crates/endpoint/prover/Cargo.toml
@@ -22,6 +22,7 @@ tracing-subscriber = { version = "0.3.19", default-features = true, features = [
 ] }
 tungstenite = "0.26.2"
 valence-coprocessor.path = "../../core"
+valence-coprocessor-sp1.path = "../../runtime/sp1"
 
 [features]
 gpu = ["sp1-sdk/cuda", "sp1-sdk/native-gnark"]
