--- a/crates/endpoint/service/Cargo.toml
+++ b/crates/endpoint/service/Cargo.toml
@@ -8,12 +8,14 @@ description = "The Valence co-processor service application."
 [dependencies]
 anyhow.workspace = true
 base64.workspace = true
+clap.workspace = true
 dirs = "6.0.0"
 serde.workspace = true
 serde_json.workspace = true
 tokio = { version = "1.44.2", features = ["full"] }
 toml = "0.8.20"
 valence-coprocessor.path = "../../core"
+valence-coprocessor-prover.path = "../prover"
 valence-coprocessor-redis.path = "../../data/redis"
 valence-coprocessor-sp1.path = "../../runtime/sp1"
 valence-coprocessor-wasm.path = "../../runtime/wasm"
