--- a/crates/endpoint/prover/Cargo.toml
+++ b/crates/endpoint/prover/Cargo.toml
@@ -13,6 +13,7 @@ clap.workspace = true
 flume = "0.11.1"
 lru.workspace = true
 msgpacker = { workspace = true, default-features = true }
+rand = "0.9.1"
 serde.workspace = true
 sp1-sdk.workspace = true
 tokio = { version = "1.44.2", features = ["full"] }
