--- a/crates/endpoint/service/Cargo.toml
+++ b/crates/endpoint/service/Cargo.toml
@@ -4,20 +4,21 @@ version.workspace = true
 edition.workspace = true
 authors.workspace = true
 description = "The Valence co-processor service application."
-default-run = "server"
 
 [dependencies]
 anyhow.workspace = true
 base64.workspace = true
+clap.workspace = true
 dirs = "6.0.0"
 serde.workspace = true
 serde_json.workspace = true
 tokio = { version = "1.44.2", features = ["full"] }
 toml = "0.8.20"
-valence-coprocessor.path = "../core"
-valence-coprocessor-redis.path = "../data/redis"
-valence-coprocessor-sp1.path = "../runtime/sp1"
-valence-coprocessor-wasm.path = "../runtime/wasm"
+valence-coprocessor.path = "../../core"
+valence-coprocessor-prover.path = "../prover"
+valence-coprocessor-redis.path = "../../data/redis"
+valence-coprocessor-sp1.path = "../../runtime/sp1"
+valence-coprocessor-wasm.path = "../../runtime/wasm"
 tracing.workspace = true
 tracing-subscriber = { version = "0.3.19", default-features = true, features = [
   "env-filter",
@@ -26,11 +27,3 @@ poem = { version = "3.1.9", features = ["anyhow"] }
 poem-openapi = { version = "5.1.13", features = ["swagger-ui"] }
 hex = "0.4.3"
 flume = "0.11.1"
-
-[[bin]]
-name = "server"
-path = "src/bin/server/main.rs"
-
-[[bin]]
-name = "cli"
-path = "src/bin/cli/main.rs"
