--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ blake3 = { version = "1.6.1", default-features = false }
 buf-fs = "0.1.2"
 clap = { version = "4.5.37", features = ["derive"] }
 hashbrown = "0.15.2"
+hex = "0.4.3"
 lru = "0.14.0"
 msgpacker = { version = "0.4.7", default-features = false, features = [
   "alloc",
