--- a/crates/endpoint/prover/Cargo.toml
+++ b/crates/endpoint/prover/Cargo.toml
@@ -11,6 +11,7 @@ base64.workspace = true
 bincode.workspace = true
 clap.workspace = true
 flume = "0.11.1"
+hex.workspace = true
 lru.workspace = true
 msgpacker = { workspace = true, default-features = true }
 rand = "0.9.1"
