--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -8,7 +8,7 @@ description = "The Valence co-processor definition"
 [dependencies]
 anyhow.workspace = true
 buf-fs.workspace = true
-base64.workspace = true
+base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
 hashbrown.workspace = true
 blake3.workspace = true
 msgpacker.workspace = true
