--- a/crates/runtime/wasm/contrib/storage/Cargo.toml
+++ b/crates/runtime/wasm/contrib/storage/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 [dependencies]
 base64.workspace = true
 serde_json.workspace = true
+valence-coprocessor.workspace = true
 valence-coprocessor-wasm.workspace = true
 
 [lib]
