refactor: rename `program` to `controller`

--- a/crates/runtime/wasm/contrib/Cargo.toml
+++ b/crates/runtime/wasm/contrib/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace]
 members = [
+  "controller",
   "domain",
   "hello",
   "http",
   "log",
-  "program",
   "raw_storage",
   "storage",
 ]
