--- a/crates/domains/ethereum/Cargo.toml
+++ b/crates/domains/ethereum/Cargo.toml
@@ -16,7 +16,7 @@ valence-zk-proofs = { git = "https://github.com/timewave-computer/zk-merkle-proo
 valence-zk-proofs-ethereum = { git = "https://github.com/timewave-computer/zk-merkle-proofs.git", package = "ethereum", rev = "f474311c62df0011b549b48ea515d0d45dd1a4cc", optional = true }
 
 [features]
-default = ["circuit", "lib", "serde"]
+default = ["circuit", "controller", "serde"]
 circuit = [
   "msgpacker",
   "serde",
@@ -24,7 +24,7 @@ circuit = [
   "valence-zk-proofs",
   "valence-zk-proofs-ethereum",
 ]
-lib = ["anyhow", "msgpacker", "serde", "serde_json"]
+controller = ["anyhow", "msgpacker", "serde", "serde_json"]
 msgpacker = ["dep:msgpacker"]
 serde = ["dep:serde"]
 std = []
@@ -32,4 +32,4 @@ std = []
 [[test]]
 name = "ethereum"
 path = "tests/ethereum.rs"
-required-features = ["circuit", "lib"]
+required-features = ["circuit", "controller"]
