--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,12 @@ members = [
   "crates/core",
   "crates/data/redis",
   "crates/domains/ethereum",
-  "crates/runtime/sp1",
-  "crates/runtime/wasm",
   "crates/endpoint/cli",
   "crates/endpoint/prover",
   "crates/endpoint/service",
+  "crates/runtime/sp1",
+  "crates/runtime/wasm",
+  "crates/utils/client",
 ]
 resolver = "2"
 default-members = ["crates/core"]
@@ -33,6 +34,7 @@ msgpacker = { version = "0.4.8", default-features = false, features = [
   "alloc",
   "derive",
 ] }
+reqwest = { version = "0.12.15", features = ["blocking", "json"] }
 serde = { version = "1.0.219", default-features = false, features = [
   "alloc",
   "derive",
