--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ serde_json = { version = "1.0.140", default-features = false, features = [
 ] }
 sp1-sdk = "4.2.1"
 sp1-verifier = "4.2.1"
+tokio = { version = "1.44.2", features = ["full"] }
 tracing = { version = "0.1.41", default-features = false }
 
 [profile.optimized]
