--- a/crates/utils/client/Cargo.toml
+++ b/crates/utils/client/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
-name = "cargo-valence"
+name = "valence-coprocessor-client"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
-description = "The Valence co-processor cargo subcommand."
+description = "The Valence co-processor client"
 
 [dependencies]
 anyhow.workspace = true
-clap.workspace = true
+hex.workspace = true
 reqwest.workspace = true
 serde_json.workspace = true
-toml = "0.8.22"
+tracing.workspace = true
+tokio.workspace = true
+uuid = { version = "1.17.0", features = ["v4"] }
 valence-coprocessor.path = "../../core"
