feat: add all co-processor functions to client utils

--- a/crates/utils/client/Cargo.toml
+++ b/crates/utils/client/Cargo.toml
@@ -9,6 +9,7 @@ description = "The Valence co-processor client"
 anyhow.workspace = true
 hex.workspace = true
 reqwest.workspace = true
+serde.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
 tokio.workspace = true
