--- a/crates/runtime/wasm/Cargo.toml
+++ b/crates/runtime/wasm/Cargo.toml
@@ -18,6 +18,7 @@ valence-coprocessor = { path = "../../core", default-features = false }
 wasmtime = { version = "32.0.0", optional = true }
 
 [dev-dependencies]
+hex.workspace = true
 tiny_http = "0.12.0"
 valence-coprocessor = { path = "../../core", features = ["mocks", "std"] }
 
