--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 members = [
   "crates/core",
   "crates/data/redis",
-  "crates/domains/ethereum",
   "crates/endpoint/cli",
   "crates/endpoint/prover",
   "crates/endpoint/service",
@@ -17,7 +16,7 @@ default-members = ["crates/core"]
 authors = ["Timewave Labs"]
 edition = "2021"
 license = "Apache-2.0"
-version = "0.3.4"
+version = "0.3.5"
 repository = "https://github.com/timewave-computer/valence-coprocessor"
 
 [workspace.dependencies]
@@ -46,6 +45,10 @@ sp1-sdk = "5.0.0"
 sp1-verifier = "5.0.0"
 tokio = { version = "1.44.2", features = ["full"] }
 tracing = { version = "0.1.41", default-features = false }
+
+[profile.dev]
+# https://github.com/seanmonstar/reqwest/issues/1450
+debug-assertions = false
 
 [profile.optimized]
 inherits = "release"
