--- a/.github/workflows/crate2nix.yml
+++ b/.github/workflows/crate2nix.yml
@@ -12,7 +12,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  gomod2nix-update:
+  crate2nix-update:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
