--- a/crates/endpoint/prover/Cargo.toml
+++ b/crates/endpoint/prover/Cargo.toml
@@ -21,7 +21,7 @@ tracing.workspace = true
 tracing-subscriber = { version = "0.3.19", default-features = true, features = [
   "env-filter",
 ] }
-tungstenite = "0.26.2"
+tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
 valence-coprocessor.path = "../../core"
 valence-coprocessor-sp1.path = "../../runtime/sp1"
 
