--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 members = [
   "crates/core",
+  "crates/merkle",
+  "crates/types",
   "crates/data/redis",
   "crates/endpoint/cli",
   "crates/endpoint/prover",
@@ -10,7 +12,7 @@ members = [
   "crates/utils/client",
 ]
 resolver = "2"
-default-members = ["crates/core"]
+default-members = ["crates/core", "crates/merkle", "crates/types"]
 
 [workspace.package]
 authors = ["Timewave Labs"]
@@ -22,6 +24,7 @@ repository = "https://github.com/timewave-computer/valence-coprocessor"
 [workspace.dependencies]
 anyhow = { version = "1.0.83", default-features = false }
 ark-groth16 = { version = "0.5.0", default-features = false }
+base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
 bincode = "1.3.3"
 blake3 = { version = "1.6.1", default-features = false }
 buf-fs = "0.1.2"
@@ -33,6 +36,7 @@ msgpacker = { version = "0.4.8", default-features = false, features = [
   "alloc",
   "derive",
 ] }
+proptest = "1.6.0"
 reqwest = { version = "0.12.15", features = ["blocking", "json"] }
 serde = { version = "1.0.219", default-features = false, features = [
   "alloc",
@@ -48,6 +52,7 @@ sp1-stark = "5.0.0"
 sp1-verifier = "5.0.0"
 tokio = { version = "1.44.2", features = ["full"] }
 tracing = { version = "0.1.41", default-features = false }
+zerocopy = { version = "0.8.23", features = ["alloc", "derive"] }
 
 [profile.dev]
 # https://github.com/seanmonstar/reqwest/issues/1450
