feat: add compound historical tree

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -21,7 +21,9 @@ valence-coprocessor-merkle.path = "../merkle"
 valence-coprocessor-types.path = "../types"
 
 [dev-dependencies]
+hex.workspace = true
 proptest.workspace = true
+rand.workspace = true
 valence-coprocessor = { path = ".", features = ["mocks"] }
 
 [features]
