--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ default-members = ["crates/core", "crates/merkle", "crates/types"]
 authors = ["Timewave Labs"]
 edition = "2021"
 license = "Apache-2.0"
-version = "0.3.13"
+version = "0.4.0"
 repository = "https://github.com/timewave-computer/valence-coprocessor"
 
 [workspace.dependencies]
@@ -30,13 +30,14 @@ blake3 = { version = "1.6.1", default-features = false }
 buf-fs = "0.1.2"
 clap = { version = "4.5.37", features = ["derive"] }
 hashbrown = "0.15.2"
-hex = "0.4.3"
+hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 lru = "0.14.0"
 msgpacker = { version = "0.4.8", default-features = false, features = [
   "alloc",
   "derive",
 ] }
 proptest = "1.6.0"
+rand = "0.9.2"
 reqwest = { version = "0.12.15", features = ["blocking", "json"] }
 serde = { version = "1.0.219", default-features = false, features = [
   "alloc",
@@ -46,10 +47,10 @@ serde_cbor = "0.11.2"
 serde_json = { version = "1.0.140", default-features = false, features = [
   "alloc",
 ] }
-sp1-core-executor = "5.0.0"
-sp1-sdk = "5.0.0"
-sp1-stark = "5.0.0"
-sp1-verifier = "5.0.0"
+sp1-core-executor = "=5.0.8"
+sp1-sdk = "=5.0.8"
+sp1-stark = "=5.0.8"
+sp1-verifier = "=5.0.8"
 tokio = { version = "1.44.2", features = ["full"] }
 tracing = { version = "0.1.41", default-features = false }
 zerocopy = { version = "0.8.23", features = ["alloc", "derive"] }
