--- a/tests/service/circuit/script/Cargo.toml
+++ b/tests/service/circuit/script/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 bincode = "1.1.3"
-sp1-sdk = "5.0.0"
+sp1-sdk = "=5.0.8"
 
 [build-dependencies]
-sp1-build = "5.0.0"
+sp1-build = "=5.0.8"
