--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
 bincode = "1.3.3"
 blake3 = { version = "1.6.1", default-features = false }
 buf-fs = "0.1.2"
-clap = { version = "4.5.37", features = ["derive"] }
+clap = { version = "4.5.37", features = ["derive", "env"] }
 hashbrown = "0.15.2"
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 lru = "0.14.0"
