--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ ark-groth16 = { version = "0.5.0", default-features = false }
 bincode = "1.3.3"
 blake3 = { version = "1.6.1", default-features = false }
 buf-fs = "0.1.2"
-clap = { version = "4.5.37", features = ["derive"] }
+clap = { version = "4.5.37", features = ["derive", "env"] }
 hashbrown = "0.15.2"
 hex = "0.4.3"
 lru = "0.14.0"
